plugins {
    id 'java-library'
    id 'net.neoforged.gradle.userdev' version '7.1.11'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
}

jar {
    archiveBaseName.set("battleroyale")
    archiveVersion.set(mod_version)
    archiveClassifier.set("core")
}